--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -31,7 +31,7 @@
         <div class="row w-100  justify-content-between">
             <div class="col-md-2 p-0 mt-2">
                 <div class="custom-card count-card flex-column py-5 bg-primary text-white fs-3 gap-0"
-                    style="cursor:pointer">
+                    style="cursor:pointer" id="Total">
                     <i class="fa-solid fa-file-pen"></i>
                     <span class="text">Total</span>
                     <p class="value fs-2 fw-bold d-flex justify-content-center" id="total">20</p>
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-2 p-0 mt-2 ">
                 <div class="custom-card count-card flex-column py-5 bg-success text-white fs-3 gap-0"
-                    style="cursor:pointer">
+                    style="cursor:pointer" id="Sanctioned">
                     <i class="fa-solid fa-flag-checkered"></i>
                     <span class="text">Sanctioned</span>
                     <p class="value fs-2 fw-bold d-flex justify-content-center" id="sanction">20</p>
@@ -47,7 +47,7 @@
             </div>
             <div class="col-md-2 p-0 mt-2">
                 <div class="custom-card count-card flex-column fs-3 py-5 bg-warning text-dark gap-0"
-                    style="cursor:pointer">
+                    style="cursor:pointer" id="Pending">
                     <i class="fa-solid fa-hourglass-half"></i>
                     <span class="text">Pending</span>
                     <p class="value fs-2 fw-bold  d-flex justify-content-center" id="pending">20</p>
@@ -55,16 +55,16 @@
             </div>
             <div class="col-md-2 p-0 mt-2">
                 <div class="custom-card count-card flex-column fs-3 py-4 bg-info text-white gap-2"
-                    style="cursor:pointer">
+                    style="cursor:pointer" id="PendingWithCitizen">
                     <i class="fa-solid fa-user-clock"></i>
-                    <span class="fs-5">Pending With Citizen</span>
-                    <span class="fs-4">For Editing</span>
+                    <span class="text fs-5">Pending With Citizen</span>
+                    <span class="text fs-4">For Editing</span>
                     <p class="value fs-2 fw-bold d-flex justify-content-center" id="pendingWithCitizen">20</p>
                 </div>
             </div>
             <div class="col-md-2 p-0 mt-2">
                 <div class="custom-card count-card flex-column fs-3 py-5 bg-danger text-white gap-0"
-                    style="cursor:pointer">
+                    style="cursor:pointer" id="Rejected">
                     <i class="fa-solid fa-ban"></i>
                     <span class="text">Rejected</span>
                     <p class="value fs-2 fw-bold  d-flex justify-content-center" id="rejected">20</p>
