--- a/wwwroot/css/sidebar.css
+++ b/wwwroot/css/sidebar.css
@@ -34,8 +34,18 @@ label {
 
 @media only screen and (max-width: 600px) {
     .sidebar-size {
-
         left: -600px;
+        width: 100%;
+        transition: left 0.5s ease-in;
+    }
+    .sidebar-size.show{
+        left: 0px;
+    }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+    .sidebar-size {
+        left: -850px;
         width: 100%;
         transition: left 0.5s ease-in;
     }
