--- a/Views/Shared/AdminNavbar.cshtml
+++ b/Views/Shared/AdminNavbar.cshtml
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg border-bottom">
-    <div class="container-fluid">
+    <div class="container-fluid d-flex flex-column">
+        <span class="md-hidden">
+            <i class="fa-solid fa-bars"></i>
+        </span>
         <p class="text-center fw-bold fs-1 w-100">SocialWelfare Department</p>
     </div>
 </nav>
