--- a/Views/Admin/Individual.cshtml
+++ b/Views/Admin/Individual.cshtml
@@ -11,7 +11,7 @@
 
     <button class="btn btn-dark d-flex mx-auto mt-2" id="getFlow">Get Application Flow</button>
 
-    <div class="container custom-card p-5 gap-2 mt-2" id="displayList" style="overflow: hidden;display: none;">
+    <div class="container d-flex flex-column aling-items-center mt-5" id="displayList" style="display: block;">
 
     </div>
     <div id="buttons" class="flex gap-3 justify-content-center mt-5" style="display: none;">
