--- a/Views/Officer/Reports.cshtml
+++ b/Views/Officer/Reports.cshtml
@@ -102,7 +102,8 @@
                     <th>Application Status</th>
                     <th>Applied District</th>
                     <th>Applied Service</th>
-                    <th>Application Currently With Officer</th>
+                    <th>Application Currently With</th>
+                    <th>Application Submission Date</th>
                 </thead>
                 <tbody id="applicationListContainer">
 
