--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -25,6 +25,9 @@
                 <option value="">Select Officer</option>
             </select>
         </div>
+        <div class="col-sm-12 d-flex justify-content-center p-2" id="spinner">
+
+        </div>
     </div>
 
     <div class="container-fluid d-flex justify-content-center ps-0">
@@ -108,7 +111,8 @@
                     <th>Applied District</th>
                     <th>Applied Service</th>
                     <th>Application Currently With</th>
-                    <th>Application Submission Date</th>
+                    <th>Application Received On</th>
+                    @* <th>Application Submission Date</th> *@
                 </thead>
                 <tbody id="applicationListContainer">
 
