--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,23 +3,12 @@
 }
 
 <div>
-    <div class="full-screen-section center-align position-relative">
-        <div class="row w-75 center-align">
-            <div class="col-sm-6">
-                <p class="font-heading">"Discover comprehensive financial services on our application."</p>
-                <p class="fs-6 fw-normal">Welcome to Social Welfare Department, a stop point for all your financial
-                    needs.
-                </p>
-                <div class="d-flex sm-flex-column gap-3">
-                    <button class="btn btn-primary p-2 px-5 fw-bold"
-                        onclick="window.location.href='/Home/Authentication'">
-                        Get Started <i class="fa-solid fa-arrow-right ms-2"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="col-sm-6 sm-hidden">
-                <img src="~/resources/homeImage.png" alt="Home Image" class="img-fluid object-fit-contain">
-            </div>
+    <div class="full-screen-section center-align position-relative p-0">
+        <div class="row center-align flex-column w-50 p-0 gap-2">
+            <img src="~/resources/socialwelfare.png" alt="Home Image"
+                class="img-fluid object-fit-contain w-50 border border-dark rounded-border p-0">
+            <a href="/Home/Authentication?action=Login" class="btn btn-primary fw-bold w-50">Get
+                Started</a>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none"
             style="position: absolute;bottom:0;left:0;width:100%;">
