Made Some Changes

--- a/Views/Officer/Applications.cshtml
+++ b/Views/Officer/Applications.cshtml
@@ -1,6 +1,6 @@
 <div class="full-screen-section center-align flex-column">
     <div class="container center-align gap-2 mb-2" id="containerSwitcher" style="display: none;">
-        <button class="btn btn-dark" id="mainButton">Main</button>
+        <button class="btn btn-dark" id="mainButton">Inbox</button>
         <button class="btn btn-secondary" id="poolButton">Pool</button>
     </div>
     <div id="mainContainer" class="container">
@@ -41,7 +41,7 @@
 
         <div class="d-flex gap-2 justify-content-center mt-5">
             <button class="btn btn-dark d-flex" id="sanctionAll" disabled>Sanction All</button>
-            <button class="btn btn-dark d-flex" id="transferBack" disabled>Transfer Back to Pending List</button>
+            <button class="btn btn-dark d-flex" id="transferBack" disabled>Transfer Back to Inbox</button>
         </div>
 
     </div>
