Many Changes took place

--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -1,4 +1,4 @@
-<div class="full-screen-section flex-column py-5">
+<div class="full-screen-section flex-column py-5 mb-5">
     <div class="container-fluid mt-5">
         <div class="row p-5 justify-content-between w-100">
             <div class="col-md-3 mt-2">
