--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -65,6 +65,9 @@
                         <div id="extra" style="max-height:240px;overflow-y:auto">
 
                         </div>
+                        <div id="ceritificateDetails" class="shadow rounded-border p-3" style="display: none;">
+                            <p class="fs-3 fw-bold text-center">Certificate Details</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -107,8 +110,8 @@
             <!-- Modal body -->
             <div class="modal-body">
                 <div class="container-fluid" id="sanctionLetterDistplay">
-                    <iframe id="sactionFrame" style="width: 100%; height: 800px;"></iframe>
-                    <button class="btn btn-dark d-flex mx-auto">Approve</button>
+                    <iframe id="sanctionFrame" style="width: 100%; height: 800px;"></iframe>
+                    <button class="btn btn-dark d-flex mx-auto" id="approve">Approve</button>
                 </div>
             </div>
 
