--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -113,6 +113,26 @@
     </div>
 </div>
 
+<div class="modal" id="showSanctionLetter">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+                <div class="container-fluid" id="sanctionLetterDistplay">
+                    <iframe id="sanctionFrame" style="width: 100%; height: 800px;"></iframe>
+                    <button class="btn btn-dark d-flex mx-auto" id="approve">Approve</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
 <script>
     const countList = @Html.Raw(Json.Serialize(Model));
 </script>
